--- a/index.html
+++ b/index.html
@@ -6,18 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=0">
     <link rel="stylesheet" href="assets/css/template.css">
 
-    <script type="text/javascript">
-    window.onload = function(){
-        document.querySelector(".menumobile").addEventListener("click", function(){
-            if(document.querySelector(".menu nav ul").style.display == 'flex')  {
-                document.querySelector(".menu nav ul").style.display = 'none';
-            } else {
-                document.querySelector(".menu nav ul").style.display = 'flex';
-            }
-        });
-    };
-
-    </script>
+    <script src="./assets/js/script.js"></script>
 
     <title>Centro Médico</title>
 </head>
